2005-07-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Added defaults for ToggleButton.

2005-07-22  Roman Kennke  <roman@kennke.org>

	* java/awt/Component.java
	(setForeground): Fire PropertyChangeEvent after the foreground
	has actually changed, instead of before.
	(setBackground): Fire PropertyChangeEvent after the foreground
	has actually changed, instead of before. Avoid one comparison
	at the beginning of method.
	(getBackground): If background is null and parent is null, return
	null, instead of SystemColor.window. This is what it's supposed
	to do.
	(getFont): Avoid NPE by creating a local reference. Return
	static final DEFAULT_FONT instead of creating a new font every time
	we and our parents have no font set.
	(setFont): Made check for font equality more precise.
	(paramString): Added parent in paramString.

2005-07-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/JToggleButton.java
	(ToggleButtonModel.setPressed): Fixed order in which events
	get fired.

2005-07-22  Roman Kennke  <roman@kennke.org>

	* javax/swing/DefaultButtonModel.java
	(setPressed): Changed order in which the events get fired. The
	ActionEvent must be fired before the ChangeEvent gets fired.

2005-07-22  Roman Kennke  <roman@kennke.org>

	* java/awt/Component.java
	(show): Instead of invalidating the component, only invalidate
	the parent, if there is one. Also repaint this parent.
	Also, avoid NPEs by creating local references.
	(hide): Instead of invalidating the component, only invalidate
	the parent, if there is one. Also repaint this parent.
	Also, avoid NPEs by creating local references.

2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicButtonUI.java: API doc fixes,
	* javax/swing/plaf/basic/BasicRadioButtonUI.java: likewise,
	* javax/swing/plaf/basic/BasicTreeUI.java: likewise.

2005-07-22  David Gilbert  <david.gilbert@object-refinery.com>
