@@ -1,3 +1,8 @@
+2005-07-22  Aaron Luchko  <aluchko@redhat.com>
+
+	* gnu/classpath/jdwp/processor/ArrayTypeCommandSet.java:
+	Implemented the ArrayType CommandSet.
+
 2005-07-22  Roman Kennke  <roman@kennke.org>
 
 	* javax/swing/plaf/metal/MetalLookAndFeel.java
